# Bot-Trading-Easy-Peasy-Binance

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cek_harga_btc.py  cek_indikator_OHLCV.py  cek_liquidity.py  config.py  defilama.md  generate_dummy_data.py  h4_15m_liq_btc_auto24jam_tp_slmaster tele.py  h4_15m_liq_btc_auto24jam_tp_slmaster.py  h4_15m_liq_btc_master.py  pyproject.toml  requirements.txt  settings.json  tes order  verify_sentiment.py
.gemini/: implementation_plan.md
Bot Liq Hunt v6/: bot.py  config.py  fitur.md  safety_tracker.json
LIQ HUNT + EMA + ADX + ATR + BTC Filter + Vol Filter + BB Filter + StochRSI/: bot.py  config.py
backtest/: backtest.py
backtest_results/: config_20260202_171203.json  config_20260211_100831.json  config_20260211_101129.json  config_20260211_101153.json
backtesting/: .gitignore  backtest.py  backtest_results.csv  backtest_runner.py  config.py  data_fetcher.py
backtesting/historical_data/: metadata.json
backtesting/historical_data/ADA_USDT/: 1h.csv  5m.csv
backtesting/historical_data/AVAX_USDT/: 1h.csv  5m.csv
backtesting/historical_data/BNB_USDT/: 1h.csv  5m.csv
bot agak konservatif/: config.py  main_bot_15m.py
bot scalp 1 menit/: config.py  main_bot_v1.py
bot sniper entry/: bot sniper entry.py  config.py
bot trading tele interaktif/: bot_master.py  config.py
bot_trading_easy_peasy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
copy atasnya tes/: .gitignore  bot.py  config.py
historical_data/: fear_greed.csv  metadata.json
historical_data/BTC_USDT/: 1h.csv  5m.csv
historical_data/SOL_USDT/: 1h.csv  5m.csv
kode final/: bot_bnb_final_aji_v1.py  bot_btc_final_aji_v1.py  bot_eth_final_aji_v1.py  bot_hype_final_aji_v1.py  bot_luna2_final_aji_v1.py
pullback-type/: config.py
pullback-type (WEBSOCKET VERSION)/: config.py  main.py  safety_tracker.json
src/: .env.example  .gitignore  config.py  fitur.md  main.py
src/modules/: ai_brain.py  executor.py  journal.py  market_data.py  mongo_manager.py  onchain.py  pattern_recognizer.py  sentiment.py
src/tools/: generate_dummy_trades.py
src/utils/: calc.py  helper.py  pnl_config.json  pnl_generator.py  prompt_builder.py
strategies/: ai role.md  swing trade santai.md
streamlit/: dashboard.py
streamlit/data/: trade_history.csv
tests/: debug_config.py  test_executor_sync.py  test_limit_market_config.py  test_news_filtering.py  test_news_retrieval.py  test_onchain_inflow.py  test_reasoning_config.py  test_trailing_logic.py  test_wick_rejection.py
trading bot demo/: config.py  main_bot_v1.py
trading bot demo/backtesting/: StrategiAjiFull.html  ambil_data_backtest.py  backtest_strategy.py  data_BTCUSDT_15m_1tahun.csv
(+22 files in other folders)
