[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-trading-easy-peasy"
version = "1.0.0"
description = "Easy Peasy Trading Bot: AI Vision & Logic Sniper"
readme = "README.md"
license = { text = "PolyForm Noncommercial License 1.0.0" }
authors = [
    { name = "Kaleksanan Barqi Aji Massani" }
]
keywords = ["crypto", "trading", "bot", "ai", "vision", "logic-sniper"]
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "pandas_ta>=0.3.14b",
    "python-dotenv>=1.0.0",
    "websockets>=11.0",
    "requests>=2.28.0",
    "httpx>=0.25.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
